Use exec built-in command to suppress stderr of the bash process itself. This modification is the replacement of bash -i hack. The hack didn't work well.

--- a/brokenness/ChangeLog
+++ b/brokenness/ChangeLog
@@ -1,3 +1,9 @@
+2010-11-12  Masatake YAMATO  <yamato@redhat.com>
+
+	* rpmdb-brokenness.sh (associated): New function.
+	(#!/bin/bash): Don't use -i option.
+	(with_timeout): Use `assassinate' to send a signal for killing.
+
 2010-03-09  Masatake YAMATO  <yamato@redhat.com>
 
 	* rpmdb-brokenness.sh (check_rebuilddb_on_copied): Added new function.
